<resources>
    <string name="app_name">Calculadora_Diplomado</string>
    <string name="action_settings">Settings</string>
    <string name="display"></string>
    <string name="btn0">0</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btnpunto">.</string>
    <string name="btnigual">=</string>
    <string name="btnborrar">DEL</string>
    <string name="btnac">AC</string>
    <string name="btndivide">/</string>
    <string name="btnmultiplica">*</string>
    <string name="btnsuma">+</string>
    <string name="btnresta">-</string>
    <string name="btnmod">mod</string>
    <string name="btndecimal">dec</string>
    <string name="btnbinario">bin</string>
</resources>
