<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="silvanet.com.mx.calculadora_diplomado.MainActivity">

    <TextView
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colordisplay"
        android:gravity="right"
        android:textSize="@dimen/text_display_height"
        android:textColor="@color/colortextdisplay"
        android:text="@string/display" />

    <LinearLayout
        android:id="@+id/botones"
        android:orientation="horizontal"
        android:layout_below="@+id/display"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="@dimen/linear_horizontal_with"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btndecimal"
                android:text="@string/btndecimal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn7"
                android:text="@string/btn7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn4"
                android:text="@string/btn4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn1"
                android:text="@string/btn1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btnpunto"
                android:text="@string/btnpunto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="@dimen/linear_horizontal_with"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btnbinario"
                android:text="@string/btnbinario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn8"
                android:text="@string/btn8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn5"
                android:text="@string/btn5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn2"
                android:text="@string/btn2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn0"
                android:text="@string/btn0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="@dimen/linear_horizontal_with"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btnac"
                android:text="@string/btnac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn9"
                android:text="@string/btn9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn6"
                android:text="@string/btn6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn3"
                android:text="@string/btn3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btnigual"
                android:text="@string/btnigual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="@dimen/linear_horizontal_with"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btnborrar"
                android:text="@string/btnborrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btndivide"
                android:text="@string/btndivide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btnmultiplica"
                android:text="@string/btnmultiplica"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btnresta"
                android:text="@string/btnresta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btnsuma"
                android:text="@string/btnsuma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btnmod"
                android:text="@string/btnmod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
